refactor: add mapper for Booking model and events