@@ -9,8 +9,6 @@ import java.util.stream.Collectors;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.cache.annotation.CacheEvict;
 import org.springframework.cache.annotation.Cacheable;
-import org.springframework.data.redis.core.RedisTemplate;
-import org.springframework.data.redis.core.StringRedisTemplate;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 
@@ -20,6 +18,8 @@ import com.booking.booking.events.bookingEvents.BookingCreatedEvent;
 import com.booking.booking.events.bookingEvents.BookingDeletedEvent;
 import com.booking.booking.events.bookingEvents.BookingUpdatedEvent;
 import com.booking.booking.exceptions.ApiException;
+import com.booking.booking.mappers.BookingMapper;
+import com.booking.booking.mappers.events.BookingEventMapper;
 import com.booking.booking.models.Bookings;
 import com.booking.booking.models.Users;
 import com.booking.booking.repositories.BookingsRepository;
@@ -37,6 +37,12 @@ public class BookingsServices {
     @Autowired
     private UsersRepository usersRepository;
 
+    @Autowired
+    private BookingMapper bookingMapper;
+
+    @Autowired
+    private BookingEventMapper bookingEventMapper;
+
     
     @CacheEvict(value = "bookings", allEntries = true)
     public BookingsResponseDTO saveBooking(BookingsRequestDTO requestDTO){
@@ -52,10 +58,6 @@ public class BookingsServices {
                  HttpStatus.CONFLICT);
             }
         
-
-        if(conflict.isPresent()){
-            throw new ApiException("THIS TIME SLOT IS ALREADY BOOKED", HttpStatus.CONFLICT);
-        }
         
         Users provider = usersRepository.findById(requestDTO.providerId())
             .orElseThrow(() -> new ApiException("PROVIDER NOT FOUND",HttpStatus.NOT_FOUND));
@@ -63,37 +65,17 @@ public class BookingsServices {
         Users customer = usersRepository.findById(requestDTO.customerId())
             .orElseThrow(() -> new ApiException("CUSTOMER NOT FOUND", HttpStatus.NOT_FOUND));
         
-        Bookings booking = Bookings.builder()
-            .provider(provider)
-            .customer(customer)
-            .startsTs(requestDTO.startsTs())
-            .endTs(requestDTO.endTs())
-            .status(requestDTO.status())
-            .build();
+        Bookings booking = bookingMapper.toEntity(requestDTO);
+        booking.setProvider(provider);
+        booking.setCustomer(customer);
         
         Bookings bookingSaved = bookingsRepository.save(booking);
 
-        BookingCreatedEvent bookingCreatedEvent = BookingCreatedEvent.builder()
-            .id(bookingSaved.getId())
-            .customerId(bookingSaved.getCustomer().getId())
-            .endTs(bookingSaved.getEndTs())
-            .startsTs(bookingSaved.getStartsTs())
-            .providerId(bookingSaved.getProvider().getId())
-            .eventTs(LocalDateTime.now())
-            .build();
+        BookingCreatedEvent bookingCreatedEvent = bookingEventMapper.toCreatedEvent(bookingSaved);
 
         messageProducerBookings.sendBookingCreateEvent(bookingCreatedEvent);
 
-        return new BookingsResponseDTO(
-            bookingSaved.getId(),
-            bookingSaved.getProvider().getId(),
-            bookingSaved.getCustomer().getId(),
-            bookingSaved.getStartsTs(),
-            bookingSaved.getEndTs(),
-            bookingSaved.getStatus(),
-            bookingSaved.getCreatedAt(),
-            bookingSaved.getUpdatedAt()
-        );
+        return bookingMapper.toResponse(bookingSaved);
     }
 
     @Cacheable(value = "bookings", key = "#id")
@@ -103,16 +85,7 @@ public class BookingsServices {
             throw new ApiException("BOOKINGS NOT FOUND", HttpStatus.NOT_FOUND);
         }
 
-        return new BookingsResponseDTO(
-            bookingsFound.get().getId(),
-            bookingsFound.get().getProvider().getId(),
-            bookingsFound.get().getCustomer().getId(),
-            bookingsFound.get().getStartsTs(),
-            bookingsFound.get().getEndTs(),
-            bookingsFound.get().getStatus(),
-            bookingsFound.get().getCreatedAt(),
-            bookingsFound.get().getUpdatedAt()
-        );
+        return bookingMapper.toResponse(bookingsFound.get());
     }
 
     
@@ -125,27 +98,11 @@ public class BookingsServices {
 
         bookingsRepository.deleteById(id);
 
-        BookingDeletedEvent bookingDeletedEvent = BookingDeletedEvent.builder()
-            .id(bookingsFound.get().getId())
-            .customerId(bookingsFound.get().getCustomer().getId())
-            .endTs(bookingsFound.get().getEndTs())
-            .startsTs(bookingsFound.get().getStartsTs())
-            .providerId(bookingsFound.get().getProvider().getId())
-            .eventTs(LocalDateTime.now())
-            .build();
+        BookingDeletedEvent bookingDeletedEvent = bookingEventMapper.toDeletedEvent(bookingsFound.get());
 
         messageProducerBookings.sendBookingDeleteEvent(bookingDeletedEvent);
             
-        return new BookingsResponseDTO(
-            bookingsFound.get().getId(),
-            bookingsFound.get().getProvider().getId(),
-            bookingsFound.get().getCustomer().getId(),
-            bookingsFound.get().getStartsTs(),
-            bookingsFound.get().getEndTs(),
-            bookingsFound.get().getStatus(),
-            bookingsFound.get().getCreatedAt(),
-            bookingsFound.get().getUpdatedAt()
-        );
+        return bookingMapper.toResponse(bookingsFound.get());
     }
 
     public BookingsResponseDTO updateBooking(Long id,BookingsRequestDTO bookingsRequestDTO){
@@ -160,36 +117,17 @@ public class BookingsServices {
         Users customer = usersRepository.findById(bookingsRequestDTO.customerId())
             .orElseThrow(() -> new ApiException("CUSTOMER NOT FOUND", HttpStatus.NOT_FOUND));
 
+        bookingMapper.updateEntity(bookingsRequestDTO,booking);
         booking.setProvider(provider);
         booking.setCustomer(customer);
-        booking.setStartsTs(bookingsRequestDTO.startsTs());
-        booking.setEndTs(bookingsRequestDTO.endTs());
-        booking.setStatus(bookingsRequestDTO.status());
-
+        
         Bookings saved = bookingsRepository.save(booking);
 
-         BookingUpdatedEvent event = BookingUpdatedEvent.builder()
-            .id(saved.getId())
-            .providerId(saved.getProvider().getId())
-            .customerId(saved.getCustomer().getId())
-            .startsTs(saved.getStartsTs())
-            .endTs(saved.getEndTs())
-            .eventTs(LocalDateTime.now())
-            .build();
-
+        BookingUpdatedEvent event = bookingEventMapper.toUpdatedEvent(saved);
 
         messageProducerBookings.sendBookingUpdateEvent(event);
 
-        return new BookingsResponseDTO(
-            saved.getId(),
-            saved.getProvider().getId(),
-            saved.getCustomer().getId(),
-            saved.getStartsTs(),
-            saved.getEndTs(),
-            saved.getStatus(),
-            saved.getCreatedAt(),
-            saved.getUpdatedAt()
-        );
+        return bookingMapper.toResponse(saved);
     }
 
     @Cacheable(value = "bookings", key = "'all'")
@@ -200,16 +138,8 @@ public class BookingsServices {
         }
 
         return bookingsFound.stream()
-            .map(b -> new BookingsResponseDTO(
-                    b.getId(),
-                    b.getProvider().getId(),
-                    b.getCustomer().getId(),
-                    b.getStartsTs(),
-                    b.getEndTs(),
-                    b.getStatus(),
-                    b.getCreatedAt(),
-                    b.getUpdatedAt()))
-                    .collect(Collectors.toList());
+            .map(booking -> bookingMapper.toResponse(booking))
+            .toList();
 
     }   
 }
